core/libycp/testsuite/tests/scope/Define1.ycp
{
    // error
    define integer plus (integer i, integer i)
    {
	return i;
    }

    return 2;
}
